# FindFK

./: .gitignore  CMakeLists.txt  README.md  WeightedQuickUnionPathCompression.cc  aggregation.cc
data/: fc.yaml  fk.yaml  output.txt  test_data.txt
doc/: example_fc.md  example_fk.md
examples/: c1.txt  data.txt  f1.txt  fc.yaml  fk.yaml  format_input.py  input_fk.txt  input_fk2.txt  k1.txt  output_fc.txt  output_fk.txt  output_fk2.txt
python/: hist.py  onevalue.py  plot_input.py  plot_output.py  test_fc.py  test_fk.py  utils.py
src/: CMakeLists.txt  WeightedQuickUnionPathCompression.hpp  aggregation.cc  aggregation.hpp  findfk.cc
test/: CMakeLists.txt  test_line.cc  test_square.cc  tools.hpp
